--- a/package.xml
+++ b/package.xml
@@ -19,10 +19,10 @@
   <email>keith@silverorange.com</email>
   <active>yes</active>
  </lead>
- <date>2014-05-22</date>
- <time>13:48:21</time>
+ <date>2014-06-20</date>
+ <time>15:42:06</time>
  <version>
-  <release>0.1.3</release>
+  <release>0.1.4</release>
   <api>0.1.0</api>
  </version>
  <stability>
@@ -77,6 +77,7 @@ initial release
     <file name="Promo.php" role="php" />
     <file name="PromoApplication.php" role="php" />
     <file name="PromoCheckoutCart.php" role="php" />
+    <file name="PromoPromotionCodeGenerator.php" role="php" />
    </dir> <!-- /Promo -->
    <dir name="sql">
     <dir name="tables">
@@ -146,14 +147,14 @@ initial release
  <changelog>
   <release>
    <version>
-    <release>0.1.3</release>
+    <release>0.1.4</release>
     <api>0.1.0</api>
    </version>
    <stability>
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2014-05-22</date>
+   <date>2014-06-20</date>
    <license uri="http://www.opensource.org/licenses/mit-license.html">MIT License</license>
    <notes>
 initial release
