--- a/package.xml
+++ b/package.xml
@@ -19,10 +19,10 @@
   <email>keith@silverorange.com</email>
   <active>yes</active>
  </lead>
- <date>2014-06-20</date>
- <time>15:42:06</time>
+ <date>2014-07-03</date>
+ <time>14:24:59</time>
  <version>
-  <release>0.1.4</release>
+  <release>0.1.5</release>
   <api>0.1.0</api>
  </version>
  <stability>
@@ -31,7 +31,7 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/mit-license.html">MIT License</license>
  <notes>
-initial release
+beta release
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -147,17 +147,17 @@ initial release
  <changelog>
   <release>
    <version>
-    <release>0.1.4</release>
+    <release>0.1.5</release>
     <api>0.1.0</api>
    </version>
    <stability>
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2014-06-20</date>
+   <date>2014-07-03</date>
    <license uri="http://www.opensource.org/licenses/mit-license.html">MIT License</license>
    <notes>
-initial release
+beta release
    </notes>
   </release>
  </changelog>
