--- a/package.xml
+++ b/package.xml
@@ -19,10 +19,10 @@
   <email>keith@silverorange.com</email>
   <active>yes</active>
  </lead>
- <date>2015-10-01</date>
- <time>16:47:55</time>
+ <date>2016-01-16</date>
+ <time>22:53:35</time>
  <version>
-  <release>0.1.13</release>
+  <release>0.1.14</release>
   <api>0.1.0</api>
  </version>
  <stability>
@@ -104,6 +104,8 @@ beta release
      </dir> <!-- /www/admin/styles -->
     </dir> <!-- /www/admin -->
    </dir> <!-- /www -->
+   <file name="autoload.php" role="php" />
+   <file name="composer.json" role="data" />
    <file name="LICENSE" role="doc" />
    <file name="README.md" role="doc" />
   </dir> <!-- / -->
@@ -147,14 +149,14 @@ beta release
  <changelog>
   <release>
    <version>
-    <release>0.1.13</release>
+    <release>0.1.14</release>
     <api>0.1.0</api>
    </version>
    <stability>
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2015-10-01</date>
+   <date>2016-01-16</date>
    <license uri="http://www.opensource.org/licenses/mit-license.html">MIT License</license>
    <notes>
 beta release
