--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
 		"php": ">=5.3.0",
 		"pear/text_password": "^1.1.0",
 		"silverorange/admin": "^2.1.5",
-		"silverorange/site": "^3.0.0",
-		"silverorange/store": "^2.1.24 || ^3.0.0",
+		"silverorange/site": "^4.0.0",
+		"silverorange/store": "^3.0.0",
 		"silverorange/swat": "^2.2.10"
 	},
 	"autoload": {
