Add composer requirements

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,20 @@
 			"email": "nick@silverorange.com"
 		}
 	],
+	"repositories": [
+		{
+			"type": "composer",
+			"url": "https://composer",
+			"options": {
+				"ssl": {
+					"cafile": "/etc/nginx/tls.crt/composer.crt"
+				}
+			}
+		},
+		{
+			"packagist": false
+		}
+	],
 	"require": {
 		"php": ">=5.3.0",
 		"pear/text_password": "^1.1.0",
@@ -36,5 +50,12 @@
 	},
 	"include-path": [
 		"./"
-	]
+	],
+	"scripts": {
+		"post-install-cmd": "./vendor/bin/phpcs --config-set installed_paths vendor/silverorange/coding-standard/src",
+		"post-update-cmd": "./vendor/bin/phpcs --config-set installed_paths vendor/silverorange/coding-standard/src"
+	},
+	"require-dev": {
+		"silverorange/coding-standard": "^0.1.0"
+	}
 }
