--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
 	],
 	"require": {
 		"php": ">=5.3.0",
+		"ext-mbstring": "*",
 		"pear/text_password": "^1.1.0",
 		"silverorange/admin": "^3.0.0",
 		"silverorange/site": "^5.0.0",
