--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,8 @@
 	"repositories": [
 		{
 			"type": "composer",
-			"url": "https://composer.silverorange.com"
-		},
-		{
-			"packagist": false
+			"url": "https://composer.silverorange.com",
+			"only": ["silverorange/*"]
 		}
 	],
 	"require": {
