--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
 		"silverorange/admin": "^5.2.0",
 		"silverorange/site": "^9.0.0 || ^10.0.0",
 		"silverorange/store": "^7.2.0 || ^8.0.0",
-		"silverorange/swat": "^5.0.0"
+		"silverorange/swat": "^5.0.0 || ^6.0.0"
 	},
 	"require-dev": {
 		"silverorange/coding-standard": "^1.0.0"
