--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
 		"ext-mbstring": "*",
 		"pear/text_password": "^1.1.0",
 		"silverorange/admin": "^5.4.0",
-		"silverorange/site": "^9.0.0 || ^10.1.1",
+		"silverorange/site": "^9.0.0 || ^10.1.1 || ^11.0.0 || ^12.0.0 || ^13.0.0",
 		"silverorange/store": "^7.2.0 || ^8.1.0",
 		"silverorange/swat": "^5.0.0 || ^6.0.0"
 	},
