Updates for new admin/site/store packages

--- a/composer.json
+++ b/composer.json
@@ -25,29 +25,65 @@
 	],
 	"repositories": [
 		{
+			"type": "path",
+			"url": "../admin",
+			"only": ["silverorange/admin"],
+			"options": {
+				"versions": {
+					"silverorange/admin": "7.0.0"
+				}
+			}
+		},
+		{
+			"type": "path",
+			"url": "../site",
+			"only": ["silverorange/site"],
+			"options": {
+				"versions": {
+					"silverorange/site": "15.1.0"
+				}
+			}
+		},
+		{
+			"type": "path",
+			"url": "../store",
+			"only": ["silverorange/store"],
+			"options": {
+				"versions": {
+					"silverorange/store": "10.0.0"
+				}
+			}
+		},
+
+		{
 			"type": "composer",
 			"url": "https://composer.silverorange.com",
 			"only": ["silverorange/*"]
 		}
 	],
 	"require": {
-		"php": ">=5.3.0",
+		"php": ">=8.0",
 		"ext-mbstring": "*",
 		"pear/text_password": "^1.1.0",
-		"silverorange/admin": "^5.4.0 || ^6.0.0",
-		"silverorange/site": "^9.0.0 || ^10.1.1 || ^11.0.0 || ^12.0.0 || ^13.0.0 || ^14.0.0",
-		"silverorange/store": "^7.2.0 || ^8.1.0 || ^9.0.0",
+		"silverorange/admin": "^5.4.0 || ^6.0.0 || ^7.0.0",
+		"silverorange/site": "^9.0.0 || ^10.1.1 || ^11.0.0 || ^12.0.0 || ^13.0.0 || ^14.0.0 || ^15.0.0",
+		"silverorange/store": "^7.2.0 || ^8.1.0 || ^9.0.0 || ^10.0.0",
 		"silverorange/swat": "^5.0.0 || ^6.0.0 || ^7.0.0"
 	},
 	"require-dev": {
+		"phpstan/phpstan": "^1.12",
 		"silverorange/coding-standard": "^1.0.0"
 	},
 	"scripts": {
 		"lint": "./vendor/bin/phpcs",
+		"phpstan": "./vendor/bin/phpstan analyze",
 		"post-install-cmd": "./vendor/bin/phpcs --config-set installed_paths vendor/silverorange/coding-standard/src",
 		"post-update-cmd": "./vendor/bin/phpcs --config-set installed_paths vendor/silverorange/coding-standard/src"
 	},
 	"autoload": {
 		"classmap": [ "Promo/" ]
+	},
+	"config": {
+		"sort-packages": true
 	}
 }
