--- a/.editorconfig
+++ b/.editorconfig
@@ -12,8 +12,7 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[*.{php,js,css,json,sql,xml}]
-indent_style = tab
+[*.php]
 indent_size = 4
 
 [*.{diff,md}]
