--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules/
 .DS_Store
 .env
 .idea/
+.php-cs-fixer.cache
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -16,3 +17,6 @@ yarn-error.log*
 # dependency lock file
 composer.lock
 yarn.lock
+
+# overrides for local tooling
+/phpstan.neon
