--- a/composer.json
+++ b/composer.json
@@ -40,14 +40,16 @@
 		"silverorange/swat": "^5.0.0 || ^6.0.0 || ^7.0.0"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "^1.12",
-		"silverorange/coding-standard": "^1.0.0"
+    "friendsofphp/php-cs-fixer": "3.64.0",
+		"phpstan/phpstan": "^1.12"
 	},
 	"scripts": {
-		"lint": "./vendor/bin/phpcs",
-		"phpstan": "./vendor/bin/phpstan analyze",
-		"post-install-cmd": "./vendor/bin/phpcs --config-set installed_paths vendor/silverorange/coding-standard/src",
-		"post-update-cmd": "./vendor/bin/phpcs --config-set installed_paths vendor/silverorange/coding-standard/src"
+    "phpcs": "./vendor/bin/php-cs-fixer check -v",
+    "phpcs:ci": "./vendor/bin/php-cs-fixer check --config=.php-cs-fixer.php --no-interaction --show-progress=none --diff --using-cache=no -vvv",
+    "phpcs:write": "./vendor/bin/php-cs-fixer fix -v",
+    "phpstan": "./vendor/bin/phpstan analyze",
+    "phpstan:ci": "./vendor/bin/phpstan analyze -vvv --no-progress --memory-limit 2G",
+    "phpstan:baseline": "./vendor/bin/phpstan analyze --generate-baseline"
 	},
 	"autoload": {
 		"classmap": [ "Promo/" ]
